# tohu

./: .gitignore  AUTOGEN_INTEGRATION.md  CONTRIBUTING.md  LICENSE  README.md  SCENARIOS.md  pyproject.toml
docs/scenarios/: unfulfillable_tasks.md
examples/autogen/: QUICKSTART_DOCUMENTATION.md  README.md  quickstart.py  rogue_prompts.py  simple_reporting.py  simple_rogue.py
examples/autogen_demos/: README.md  obvious_unfulfillable_simple.py  quickstart_simple.py  unfulfillable_tasks.py
examples/autogen_demos/datasets/: impossible_tasks.py  impossible_tasks.yaml
examples/pydantic_ai_demos/: README.md  basic_rogue_agent.py  requirements.txt
examples/unsorted/: basic_unfulfillable_tasks.py  comprehensive_unfulfillable_simple.py  custom_domain_unfulfillable_tasks.py  llm_generated_unfulfillable_example.py  llm_generated_unfulfillable_simple.py  quickstart_unfulfillable_tasks.py  real_world_unfulfillable_testing.py  simple_chaos_testing.py  simple_monitor.py  subtle_unfulfillable_simple.py  unfulfillable_tasks_example.py
src/tohu/: __init__.py  cli.py
src/tohu/core/: __init__.py  engine.py  scenario.py
src/tohu/plugins/: README.md  __init__.py  autogen_adapter.py
src/tohu/scenarios/: __init__.py  hallucination.py
src/tohu/scenarios/agent_behavior/: __init__.py  abrupt_conversations.py  rogue_agent.py  stupid_selectors.py  unfulfillable_tasks.py  wrong_termination.py
src/tohu/scenarios/infrastructure/: __init__.py  corrupted_state.py  high_latency.py  model_degradation.py  resource_exhaustion.py  tool_llm_failures.py  wrong_context_memory.py
src/tohu/scenarios/multiagent/: __init__.py  conflicting_instructions.py  oscillating_conversations.py
src/tohu/scenarios/security/: __init__.py  data_poisoning.py  prompt_injection.py
tests/: conftest.py  test_engine.py  test_scenarios.py  test_unfulfillable_tasks.py
