[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "tohu"
description = "A chaos engineering framework for agentic AI systems"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Tohu AI", email = "harelix@eversion.ai"}
]
maintainers = [
    {name = "Tohu AI", email = "harelix@eversion.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
    "typer>=0.9.0",
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "ruff>=0.0.263",
    "mypy>=1.3.0",
]
test = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "coverage>=7.2.7",
]
autogen = [
    # Dependencies for working with Microsoft's AutoGen
    # To be specified when AutoGen integration is fully implemented
    "autogen==0.7.4",
    "autogen-ext[openai]",
    "autogen-agentchat",
]

[project.urls]
Homepage = "https://github.com/tohu-ai/tohu"
Documentation = "https://github.com/tohu-ai/tohu/tree/main/docs"
Repository = "https://github.com/tohu-ai/tohu.git"
Issues = "https://github.com/tohu-ai/tohu/issues"

[project.scripts]
tohu = "tohu.cli:main"

[tool.hatch.version]
path = "src/tohu/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tohu"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E203"]

[tool.ruff.isort]
known-first-party = ["tohu"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
